--- a/arxiv/2020_07_arxiv.html
+++ b/arxiv/2020_07_arxiv.html
@@ -242,7 +242,59 @@ a:hover {text-decoration: underline; color: darkgray;}
 <p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2007.07896">https://arxiv.org/abs/2007.07896</a></span> Non-Fermi liquids as ersatz Fermi liquids: general constraints on compressible metals</p>
 <p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2007.07898">https://arxiv.org/abs/2007.07898</a></span> Observation of non-Fermi liquid physics in a quantum critical metal via quantum loop topography ***** (Simon Trebst, Eun-Ah Kim)</p>
 <p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2007.08212">https://arxiv.org/abs/2007.08212</a></span> Direct observation of excitonic instability in Ta2NiSe5 (BJ Kim)</p>
-<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2007.08323">https://arxiv.org/abs/2007.08323</a></span> Schwinger effect in a Bardeen-Cooper-Schrieffer superconductor</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2007.08323">https://arxiv.org/abs/2007.08323</a></span> Schwinger effect in a Bardeen-Cooper-Schrieffer superconductor</p><br>
+<p class="p1">20200720</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2007.08887">https://arxiv.org/abs/2007.08887</a></span> Current-induced second harmonic generation in inversion-symmetric Dirac and Weyl semimetals *** (Kazuaki Takasan, Takahiro Morimoto, Joel E. Moore)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2007.08990">https://arxiv.org/abs/2007.08990</a></span> Kibble–Zurek mechanism in the Ising Field Theory ****</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2007.08982">https://arxiv.org/abs/2007.08982</a></span> (No) phase transition in tensorial field theory</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2007.08870">https://arxiv.org/abs/2007.08870</a></span> Abelian topological order of ν = 2/5 and 3/7 fractional quantum Hall states in lattice models</p>
+<p class="p2"><br></p>
+<p class="p1">20200721</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2007.09151">https://arxiv.org/abs/2007.09151</a></span> Computing observables without eigenstates: applications to Bloch Hamiltonians</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2007.09311">https://arxiv.org/abs/2007.09311</a></span> Knots and Non-Hermitian Bloch Bands</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2007.09974">https://arxiv.org/abs/2007.09974</a></span> Entropy, Divergence, and Majorization in Classical and Quantum Thermodynamics</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2007.09398">https://arxiv.org/abs/2007.09398</a></span> Time and Thermodynamics Extended Discussion on “Time &amp; clocks: A thermodynamic approach”</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2007.09460">https://arxiv.org/abs/2007.09460</a></span> Pristine quantum criticality in a Kondo semimetal</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2007.10208">https://arxiv.org/abs/2007.10208</a></span> Precise experimental test of the Luttinger theorem and particle-hole symmetry for a strongly correlated fermionic system **</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2006.16821">https://arxiv.org/abs/2006.16821</a></span> Dimensionless physics (G.E. Volovik)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2007.06641">https://arxiv.org/abs/2007.06641</a></span> Gauge Fixing and Constrained Dynamics **</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2007.06770">https://arxiv.org/abs/2007.06770</a></span> Time dependent Entanglement Entropy in SYK models and Page Curve</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2006.16114">https://arxiv.org/abs/2006.16114</a></span> Machine Learning Etudes in Conformal Field Theories **</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2001.00128">https://arxiv.org/abs/2001.00128</a></span> Beyond Symmetries : Anomalies in Transverse Ward–Takahashi Identities **</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2003.08397">https://arxiv.org/abs/2003.08397</a></span> Towards the QED beta function and renormalons at 1/Nf2 and 1/Nf3</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/1911.02081">https://arxiv.org/abs/1911.02081</a></span> Classical Systems in Quantum Mechanics</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/1912.01648">https://arxiv.org/abs/1912.01648</a></span> Classical Statistical simulation of Quantum Field Theory</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2007.10062">https://arxiv.org/abs/2007.10062</a></span> Misconceptions on Effective Field Theories and spontaneous symmetry breaking: Response to Ellis’ article</p>
+<p class="p2"><br></p>
+<p class="p1">20200722</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2007.10887">https://arxiv.org/abs/2007.10887</a></span> Chiral-Anomaly-Induced Nonlinear Hall Effect in Weyl Semimetals *** (Anton A. Burkov4, Steven S.-L. Zhang)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2007.10364">https://arxiv.org/abs/2007.10364</a></span> Evidence for dominant phonon-electron scattering in Weyl semimetal WP2</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2007.10380">https://arxiv.org/abs/2007.10380</a></span> Quasi-symmetry groups and many-body scar dynamics *** (Chen Fang)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2007.10448">https://arxiv.org/abs/2007.10448</a></span> Symmetry classes of open fermionic quantum matter **(Alexander Altland)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2007.10352">https://arxiv.org/abs/2007.10352</a></span> Many-body quantum dynamics slows down at low density **** (Xiao Chen, Yingfei Gu, Andrew Lucas)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2007.10562">https://arxiv.org/abs/2007.10562</a></span> A (Dummy’s) Guide to Working with Gapped Boundaries via (Fermion) Condensation</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2007.10370">https://arxiv.org/abs/2007.10370</a></span> Equivalence between vortices, twists and chiral gauge fields in Kitaev’s honeycomb lattice model *** (Jiannis K. Pachos)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2007.10682">https://arxiv.org/abs/2007.10682</a></span> Torsional Landau levels and geometric anomalies in condensed matter Weyl systems</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2007.02909">https://arxiv.org/abs/2007.02909</a></span> The spontaneous symmetry breaking in Ta2NiSe5 is structural in nature *** (Hidenori Takagi, Andrew J. Millis, Nuh Gedik)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/1801.06054">https://arxiv.org/abs/1801.06054</a></span> The Four Dimensional Dirac Equation in Five Dimensions</p>
+<p class="p2"><br></p>
+<p class="p1">20200723</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2007.11027">https://arxiv.org/abs/2007.11027</a></span> Blue phosphorene bilayer is a two-dimensional metal - and an unambiguous classification scheme for buckled hexagonal bilayers</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2007.11200">https://arxiv.org/abs/2007.11200</a></span> Review on ferroelectric/polar metals</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2007.11443">https://arxiv.org/abs/2007.11443</a></span> Friedel oscillations and interference patterns from multiple impurities in free fermions in continuous space and in correlated lattice electrons</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2003.09429">https://arxiv.org/abs/2003.09429</a></span> Fracton hydrodynamics *** (Andrey Gromov, Andrew Lucas, Rahul M. Nandkishore)</p>
+<p class="p2"><br></p>
+<p class="p1">20200724</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2007.11585">https://arxiv.org/abs/2007.11585</a></span> Topological Crystalline Phases in a Disordered Inversion-Symmetric Chain *** (Barry Bradlyn, Taylor L. Hughes)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2007.11161">https://arxiv.org/abs/2007.11161</a></span> Triangular Lattice Quantum Dimer Model Redux: Static and Dynamic Properties *** (Nvsen Ma, Yang Qi, Zi Yang Meng)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2007.12115">https://arxiv.org/abs/2007.12115</a></span> Holographic Floquet states in low dimensions</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2007.11637">https://arxiv.org/abs/2007.11637</a></span> Vacancy-induced low-energy density of states in the Kitaev spin liquid *** (Johannes Knolle, Natalia B. Perkins)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2007.11719">https://arxiv.org/abs/2007.11719</a></span> Density Wave Mediated Dzyaloshinskii-Moriya Interactions **</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2007.11963">https://arxiv.org/abs/2007.11963</a></span> Doped Mott Insulators in the Triangular Lattice Hubbard Model *** (Ashvin Vishwanath)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2007.11812">https://arxiv.org/abs/2007.11812</a> </span>Laser-induced topological s-wave superconductivity in bilayer transition metal dichalcogenides ** (Kazuaki Takasan, Youichi Yanase)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2007.12025">https://arxiv.org/abs/2007.12025</a></span> On the Dirac Quantisation rules and the trace anomaly **</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2007.11603">https://arxiv.org/abs/2007.11603</a></span> The Twisted Index and Topological Saddles (Heeyeon Kim)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2007.12010">https://arxiv.org/abs/2007.12010</a></span> Renormalization group study of superfluid phase transition: effect of compressibility</p>
 	<iframe src="../last.html" style="width:100%; height:26; border:none"></iframe>
 	</div>
 
