--- a/arxiv/2020_07_arxiv.html
+++ b/arxiv/2020_07_arxiv.html
@@ -294,7 +294,51 @@ a:hover {text-decoration: underline; color: darkgray;}
 <p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2007.11812">https://arxiv.org/abs/2007.11812</a> </span>Laser-induced topological s-wave superconductivity in bilayer transition metal dichalcogenides ** (Kazuaki Takasan, Youichi Yanase)</p>
 <p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2007.12025">https://arxiv.org/abs/2007.12025</a></span> On the Dirac Quantisation rules and the trace anomaly **</p>
 <p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2007.11603">https://arxiv.org/abs/2007.11603</a></span> The Twisted Index and Topological Saddles (Heeyeon Kim)</p>
-<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2007.12010">https://arxiv.org/abs/2007.12010</a></span> Renormalization group study of superfluid phase transition: effect of compressibility</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2007.12010">https://arxiv.org/abs/2007.12010</a></span> Renormalization group study of superfluid phase transition: effect of compressibility</p><br>
+<p class="p1">20200727</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2007.12190">https://arxiv.org/abs/2007.12190</a></span> Monopole versus spherical harmonic superconductors: Topological repulsion and stability *** (Vladimir Juriˇci ́c)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2007.12188">https://arxiv.org/abs/2007.12188</a></span> Ginzberg-Landau-Wilson theory for Flat band, Fermi-arc and surface states of strongly correlated systems *** (Sang-Jin Sin)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/1412.5125">https://arxiv.org/abs/1412.5125</a></span> Quantum field theory on curved spacetimes: axiomatic framework and examples</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2007.12234">https://arxiv.org/abs/2007.12234</a></span> Renormalization-Group Behavior of φ3 Theories in d = 6 Dimensions</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2007.12398">https://arxiv.org/abs/2007.12398</a></span> Quantum point particle approximation of spinning black holes and compact stars</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2007.03551">https://arxiv.org/abs/2007.03551</a></span> Unveiling operator growth in SYK quench dynamics</p>
+<p class="p2"><br></p>
+<p class="p1">20200728</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2007.12694">https://arxiv.org/abs/2007.12694</a></span> Anisotropic Plasmons (Seongjin Ahn, S. Das Sarma)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2007.12715">https://arxiv.org/abs/2007.12715</a></span> Amplitude Mode in Quantum Magnets via Dimensional Crossover *** (Kai Sun, Oleg A. Starykh, Zi Yang Meng)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2007.13490">https://arxiv.org/abs/2007.13490</a></span> The ’t Hooft–Polyakov monopole in the geometric theory of defects</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/1912.11923">https://arxiv.org/abs/1912.11923</a></span> Spectral fluctuations in the Sachdev-Ye-Kitaev model</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2005.03973">https://arxiv.org/abs/2005.03973</a></span> Renormalization group improvement of the effective potential in six dimensions</p>
+<p class="p2"><br></p>
+<p class="p1">20200729</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2007.14100">https://arxiv.org/abs/2007.14100</a></span> Hexagon Ising-Kondo lattice: An implication for intrinsic antiferromagnetic topological insulator</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2007.13820">https://arxiv.org/abs/2007.13820</a></span> Stark time crystals: Symmetry breaking in space and time</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2007.13753">https://arxiv.org/abs/2007.13753</a></span> Hydrodynamics in lattice models with continuous non-Abelian symmetries ** (Xiao Chen, Rahul M. Nandkishore, Andrew Lucas)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2007.13759">https://arxiv.org/abs/2007.13759</a></span> Z2 parton phases in the mixed-dimensional t − Jz model **</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2007.13790">https://arxiv.org/abs/2007.13790</a></span> The Kibble–Zurek mechanism from different angles: the transverse XY model and subleading scalings **</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2007.13785">https://arxiv.org/abs/2007.13785</a></span> Gapless state of interacting Majorana fermions in a strain-induced Landau level<span class="Apple-converted-space">  </span>(Johannes Knolle)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2007.13770">https://arxiv.org/abs/2007.13770</a></span> Artificial electric field and electron hydrodynamics (Yong Baek Kim)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2007.13837">https://arxiv.org/abs/2007.13837</a></span> Sparse Sachdev-Ye-Kitaev model, quantum chaos and gravity duals</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2007.13738">https://arxiv.org/abs/2007.13738</a></span> Spin-orbit quantum impurity and quantization in a topological magnet (M. Zahid Hasan)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2001.04106">https://arxiv.org/abs/2001.04106</a></span> Gauge dependence of the gauge boson projector</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2006.10766">https://arxiv.org/abs/2006.10766</a></span> Critical Fermi surfaces in generic dimensions arising from transverse gauge field interactions *** (Ipsita Mandal)</p>
+<p class="p2"><br></p>
+<p class="p1">20200730</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2007.14643">https://arxiv.org/abs/2007.14643</a></span> Type-III Dirac Cones from Degenerate Directionally Flat Bands: Viewpoint from Molecular-Orbital Representation ***</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2007.14952">https://arxiv.org/abs/2007.14952</a></span> Valley Pumping via Edge States and the Nonlocal Valley Hall Effect in Two-Dimensional Semiconductors</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2007.14540">https://arxiv.org/abs/2007.14540</a></span> Interplay between superconductivity and non-Fermi liquid at a quantum-critical point in a metal. III: The γ model and its phase diagram across γ = 1 ***** (Yi-Ming Wu, Artem Abanov, Andrey V. Chubukov)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2007.14932">https://arxiv.org/abs/2007.14932</a></span> Corner charge and bulk multipole moment in periodic systems (Haruki Watanabe)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2007.14947">https://arxiv.org/abs/2007.14947</a></span> Quasiparticle and Non-Quasiparticle Transport in Doped Quantum Paraelectrics (Dmitrii L. Maslov)</p>
+<p class="p2"><br></p>
+<p class="p1">20200731</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2007.15200">https://arxiv.org/abs/2007.15200</a></span> Higher-order Topological Anderson Insulators</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2007.15028">https://arxiv.org/abs/2007.15028</a></span> Quantum Geometric Contributions to the BKT Transition: Beyond Mean Field Theory **</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2007.15605">https://arxiv.org/abs/2007.15605</a></span> Correlated Fragile Topology: a Parton Approach ***** (Chong Wang)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2007.15166">https://arxiv.org/abs/2007.15166</a></span> Symmetry breaking in the double moir ́e superlattices of relaxed twisted bilayer graphene on hexagonal boron nitride ***</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2007.15487">https://arxiv.org/abs/2007.15487</a></span> Superconductivity in twisted multilayer graphene: a smoking gun in recent condensed matter physics **</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2007.15636">https://arxiv.org/abs/2007.15636</a></span> Electric-Magnetic duality in twisted quantum double model of topological orders</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2007.15002">https://arxiv.org/abs/2007.15002</a></span> Pairing in magic-angle twisted bilayer graphene: role of phonon and plasmon umklapp *** (Debanjan Chowdhury)</p>
+<p class="p3"><a href="https://arxiv.org/abs/2007.15098">https://arxiv.org/abs/2007.15098</a><span class="s2"> Mass dimension one fermions ****</span></p>
 	<iframe src="../last.html" style="width:100%; height:26; border:none"></iframe>
 	</div>
 
