--- a/arxiv/2020_08_arxiv.html
+++ b/arxiv/2020_08_arxiv.html
@@ -126,6 +126,14 @@ a:hover {text-decoration: underline; color: darkgray;}
 <a href="http://www.kaist.ac.kr/">Korea Advanced Institute of Science and Technology (KAIST)</a></span></div>-->
 <br>
 <p class="p1">20200803</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2007.16051">https://arxiv.org/abs/2007.16051</a></span> Interactions in the 8-orbital model for twisted bilayer graphene ***</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2007.15661">https://arxiv.org/abs/2007.15661</a></span> Theory of Non-Interacting Fermions and Bosons in the Canonical Ensemble</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2007.16057">https://arxiv.org/abs/2007.16057</a></span> Topological phases of spinless p-orbital fermions in zigzag optical lattices ***</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2007.16065">https://arxiv.org/abs/2007.16065</a></span> Dynamical structure factors of a two-dimensional Fermi superfluid within random phase approximation</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2007.15985">https://arxiv.org/abs/2007.15985</a></span> Emergent Potts order in the kagom ́e J1 − J3 Heisenberg model</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2007.16132">https://arxiv.org/abs/2007.16132</a></span> BELL POLYNOMIALS IN THE SERIES EXPANSIONS OF THE ISING MODEL</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2007.16205">https://arxiv.org/abs/2007.16205</a></span> Geometric Superconductivity in 3D Hofstadter Butterfly ***** (Moon Jip Park, Yong Baek Kim, SungBin Lee)</p>
+<p class="p2"><a href="https://arxiv.org/abs/1903.02907">https://arxiv.org/abs/1903.02907</a><span class="s2"> A Solvable Tensor Field Theory</span></p>
 	<iframe src="../last.html" style="width:100%; height:26; border:none"></iframe>
 	</div>
 
