--- a/arxiv/2020_08_arxiv.html
+++ b/arxiv/2020_08_arxiv.html
@@ -133,7 +133,101 @@ a:hover {text-decoration: underline; color: darkgray;}
 <p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2007.15985">https://arxiv.org/abs/2007.15985</a></span> Emergent Potts order in the kagom ́e J1 − J3 Heisenberg model</p>
 <p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2007.16132">https://arxiv.org/abs/2007.16132</a></span> BELL POLYNOMIALS IN THE SERIES EXPANSIONS OF THE ISING MODEL</p>
 <p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2007.16205">https://arxiv.org/abs/2007.16205</a></span> Geometric Superconductivity in 3D Hofstadter Butterfly ***** (Moon Jip Park, Yong Baek Kim, SungBin Lee)</p>
-<p class="p2"><a href="https://arxiv.org/abs/1903.02907">https://arxiv.org/abs/1903.02907</a><span class="s2"> A Solvable Tensor Field Theory</span></p>
+<p class="p2"><a href="https://arxiv.org/abs/1903.02907">https://arxiv.org/abs/1903.02907</a><span class="s2"> A Solvable Tensor Field Theory</span></p><br>
+<p class="p1">20200804</p>
+<p class="p2"><a href="https://arxiv.org/abs/2008.00649">https://arxiv.org/abs/2008.00649</a><span class="s1"> Glassy gravity</span></p>
+<p class="p1"><span class="s2"><a href="https://arxiv.org/abs/2004.11455">https://arxiv.org/abs/2004.11455</a></span> Phase Space Quantum Mechanics as a Landau Level Problem (Kun Yang)</p>
+<p class="p1"><span class="s2"><a href="https://arxiv.org/abs/2008.00134">https://arxiv.org/abs/2008.00134</a></span> Topological charge pumping in excitonic insulators (Andrew J. Millis)</p>
+<p class="p1"><span class="s2"><a href="https://arxiv.org/abs/2008.00980">https://arxiv.org/abs/2008.00980</a></span> From optical lattices to quantum crystals</p>
+<p class="p1"><span class="s2"><a href="https://arxiv.org/abs/2008.00996">https://arxiv.org/abs/2008.00996</a></span> Activity-induced phase transition in a quantum many-body system (Kazuaki Takasan)</p>
+<p class="p1"><span class="s2"><a href="https://arxiv.org/abs/2008.00039">https://arxiv.org/abs/2008.00039</a></span> Phase diagram of a two-site coupled complex SYK model ***</p>
+<p class="p1"><span class="s2"><a href="https://arxiv.org/abs/2008.00154">https://arxiv.org/abs/2008.00154</a></span> Braiding Statistics of Vortices in 2 + 1d Topological Superconductors from Stacking *** (Minyoung You)</p>
+<p class="p1"><span class="s2"><a href="https://arxiv.org/abs/2008.00359">https://arxiv.org/abs/2008.00359</a></span> Fate of a multiple-band Fermi liquid that is coupled with critical φ4 bosons *****</p>
+<p class="p1"><span class="s2"><a href="https://arxiv.org/abs/2008.00830">https://arxiv.org/abs/2008.00830</a></span> Fermionic criticality of anisotropic nodal point semimetals away from the upper critical dimension: exact 1/Nf exponents *****</p>
+<p class="p1"><span class="s2"><a href="https://arxiv.org/abs/2008.00882">https://arxiv.org/abs/2008.00882</a></span> Variational Monte Carlo simulation with tensor networks of a pure Z3 gauge theory in (2+1)d ***</p>
+<p class="p3"><br></p>
+<p class="p1">20200805</p>
+<p class="p1"><span class="s2"><a href="https://arxiv.org/abs/2008.01090">https://arxiv.org/abs/2008.01090</a></span> Exceptional Topological Insulators ***</p>
+<p class="p1"><span class="s2"><a href="https://arxiv.org/abs/2008.01265">https://arxiv.org/abs/2008.01265</a></span> Strong-field physics in three-dimensional topological insulators</p>
+<p class="p1"><span class="s2"><a href="https://arxiv.org/abs/2008.01328">https://arxiv.org/abs/2008.01328</a></span> Bose-Einstein condensate of Dirac magnons: pumping and collective modes (A. V. Balatsky)</p>
+<p class="p1"><span class="s2"><a href="https://arxiv.org/abs/2008.01123">https://arxiv.org/abs/2008.01123</a></span> Classification of SL2 deformed Floquet Conformal Field Theories</p>
+<p class="p1"><span class="s2"><a href="https://arxiv.org/abs/2008.01122">https://arxiv.org/abs/2008.01122</a></span> Landau-Fermi liquids without quasiparticles</p>
+<p class="p1"><span class="s2"><a href="https://arxiv.org/abs/2008.01401">https://arxiv.org/abs/2008.01401</a></span> Intrinsic Hallmarks of Phonon-Induced Charge Order in Cuprates</p>
+<p class="p1"><span class="s2"><a href="https://arxiv.org/abs/2005.07558">https://arxiv.org/abs/2005.07558</a></span> Bound on quantum scrambling with all-to-all interactions *** (Andrew Lucas)</p>
+<p class="p1"><span class="s2"><a href="https://arxiv.org/abs/2008.01349">https://arxiv.org/abs/2008.01349</a></span> A gauge redundancy-free formulation of compact QED with dynamical matter for quantum and classical computations</p>
+<p class="p3"><br></p>
+<p class="p1">20200806</p>
+<p class="p1"><span class="s2"><a href="https://arxiv.org/abs/2008.01941">https://arxiv.org/abs/2008.01941</a></span> Magnetized Topological Insulator Multilayers (Allan H. MacDonald)</p>
+<p class="p1"><span class="s2"><a href="https://arxiv.org/abs/2008.02158">https://arxiv.org/abs/2008.02158</a></span> Topological polarization and surface flat band in insulators *** (G.E. Volovik)</p>
+<p class="p1"><span class="s2"><a href="https://arxiv.org/abs/2007.13918">https://arxiv.org/abs/2007.13918</a></span> Magnetotransport and Complexity of Holographic Metal-Insulator Transitions</p>
+<p class="p1"><span class="s2"><a href="https://arxiv.org/abs/2008.02271">https://arxiv.org/abs/2008.02271</a></span> Late time physics of holographic quantum chaos ***** (Alexander Altland)</p>
+<p class="p1"><span class="s2"><a href="https://arxiv.org/abs/2008.01735">https://arxiv.org/abs/2008.01735</a></span> Γ-Valley Transition-Metal-Dichalcogenide Moir ́e Bands (Allan H. MacDonald)</p>
+<p class="p1"><span class="s2"><a href="https://arxiv.org/abs/2008.01746">https://arxiv.org/abs/2008.01746</a></span> Fracton Critical Point in Higher-Order Topological Phase Transition ****** (Yizhi You, Frank Pollmann, Taylor L. Hughes)</p>
+<p class="p1"><span class="s2"><a href="https://arxiv.org/abs/2008.01822">https://arxiv.org/abs/2008.01822</a></span> Revised thermodynamics of the Kitaev honeycomb model ***</p>
+<p class="p1"><span class="s2"><a href="https://arxiv.org/abs/2007.12615">https://arxiv.org/abs/2007.12615</a></span> An Interview with Murray Gell-Mann on June 5 2001 ***</p>
+<p class="p2"><a href="https://arxiv.org/abs/2008.02110">https://arxiv.org/abs/2008.02110</a><span class="s1"> Neutrinos: Majorana or Dirac?</span></p>
+<p class="p1"><span class="s2"><a href="https://arxiv.org/abs/2008.02190">https://arxiv.org/abs/2008.02190</a></span> Discreteness and Integrality in Conformal Field Theory</p>
+<p class="p2"><a href="https://arxiv.org/abs/2008.02058">https://arxiv.org/abs/2008.02058</a><span class="s1"> Index Theorem for Domain Walls ***</span></p>
+<p class="p1"><span class="s2"><a href="https://arxiv.org/abs/2008.01507">https://arxiv.org/abs/2008.01507</a></span> Curved Yang-Mills-Higgs gauge theories in the case of massless gauge bosons</p>
+<p class="p3"><br></p>
+<p class="p1">20200807</p>
+<p class="p1"><span class="s2"><a href="https://arxiv.org/abs/2008.02285">https://arxiv.org/abs/2008.02285</a></span> Topological and symmetry-enriched random quantum critical points *** (Yi-Zhuang You)</p>
+<p class="p1"><span class="s2"><a href="https://arxiv.org/abs/2008.02412">https://arxiv.org/abs/2008.02412</a></span> Artificial magnetic field for synthetic quantum matter without breaking time reversal symmetry</p>
+<p class="p1"><span class="s2"><a href="https://arxiv.org/abs/2008.01756">https://arxiv.org/abs/2008.01756</a></span> Localised pair formation in bosonic flat-band Hubbard models</p>
+<p class="p1"><span class="s2"><a href="https://arxiv.org/abs/2008.02292">https://arxiv.org/abs/2008.02292</a></span> Integrability and braided tensor categories</p>
+<p class="p2"><a href="https://arxiv.org/abs/2008.02329">https://arxiv.org/abs/2008.02329</a><span class="s1"> A particle-based Ising model</span></p>
+<p class="p1"><span class="s2"><a href="https://arxiv.org/abs/2008.02288">https://arxiv.org/abs/2008.02288</a></span> Fragile topology and flat-band superconductivity in the strong-coupling regime ***** (B. Andrei Bernevig)</p>
+<p class="p1"><span class="s2"><a href="https://arxiv.org/abs/2008.02303">https://arxiv.org/abs/2008.02303</a></span> A Sparse Model of Quantum Holography (Leonard Susskind, Brian Swingle)</p>
+<p class="p1"><span class="s2"><a href="https://arxiv.org/abs/2008.02613">https://arxiv.org/abs/2008.02613</a></span> Quantization of Chern-Simons topological invariants for H-type and L-type quantum systems *** (Xiao-Gang Wen)</p>
+<p class="p3"><br></p>
+<p class="p1">20200810</p>
+<p class="p1"><span class="s2"><a href="https://arxiv.org/abs/2008.03275">https://arxiv.org/abs/2008.03275</a></span> Harnessing Interpretable and Unsupervised Machine Learning to Address Big Data from Modern X-ray Diffraction (Eun-Ah Kim)</p>
+<p class="p1"><span class="s2"><a href="https://arxiv.org/abs/2008.02812">https://arxiv.org/abs/2008.02812</a></span> Electrodynamics of Thin Sheets of Twisted Material *** (Dam Thanh Son)</p>
+<p class="p1"><span class="s2"><a href="https://arxiv.org/abs/2008.02941">https://arxiv.org/abs/2008.02941</a></span> Exploring entanglement and optimization within the Hamiltonian Variational Ansatz (Yong Baek Kim)</p>
+<p class="p3"><br></p>
+<p class="p1">20200811</p>
+<p class="p1"><span class="s2"><a href="https://arxiv.org/abs/2008.03315">https://arxiv.org/abs/2008.03315</a></span> 3D Network Model for Strong Topological Insulator Transitions ***** (Jun Ho Son1 and S. Raghu)</p>
+<p class="p1"><span class="s2"><a href="https://arxiv.org/abs/2008.03721">https://arxiv.org/abs/2008.03721</a></span> Second-order topological non-Hermitian skin effects</p>
+<p class="p2"><a href="https://arxiv.org/abs/2008.03967">https://arxiv.org/abs/2008.03967</a><span class="s1"> Kramers Nodal Line Metals ***</span></p>
+<p class="p1"><span class="s2"><a href="https://arxiv.org/abs/2008.03994">https://arxiv.org/abs/2008.03994</a></span> Effective field theory for non-relativistic hydrodynamics *****</p>
+<p class="p1"><span class="s2"><a href="https://arxiv.org/abs/2008.04077">https://arxiv.org/abs/2008.04077</a></span> On critical models with <i>N </i>≤ 4 scalars in <i>d </i>= 4 − <i>ǫ</i></p>
+<p class="p1"><span class="s2"><a href="https://arxiv.org/abs/2008.03852">https://arxiv.org/abs/2008.03852</a></span> Foliated Quantum Field Theory of Fracton Order ***** (Kevin Slagle)</p>
+<p class="p1"><span class="s2"><a href="https://arxiv.org/abs/2008.04250">https://arxiv.org/abs/2008.04250</a></span> Topological band and superconductivity in UTe2 ***** (Han Gyeol Suh, Daniel F. Agterberg)<br>
+<a href="https://arxiv.org/abs/2008.03814"><span class="s2">https://arxiv.org/abs/2008.03814</span></a> Higher Chern numbers in Multilayer (N ≥ 2) Lieb Lattices: Topological Transitions and Quadratic Band Crossing Lines</p>
+<p class="p1"><span class="s2"><a href="https://arxiv.org/abs/2008.03858">https://arxiv.org/abs/2008.03858</a></span> Evidence of pair-density wave in doping Kitaev spin liquid on the honeycomb lattice *****</p>
+<p class="p1"><span class="s2"><a href="https://arxiv.org/abs/2008.03419">https://arxiv.org/abs/2008.03419</a></span> Interference of Cooper quartet Andreev bound states in a multi-terminal graphene-based Josephson junction *** (Philip Kim)</p>
+<p class="p3"><br></p>
+<p class="p1">20200812</p>
+<p class="p2"><a href="https://arxiv.org/abs/2008.04682">https://arxiv.org/abs/2008.04682</a><span class="s1"> 3He Universe 2020 (G.E. Volovik)</span></p>
+<p class="p1"><span class="s2"><a href="https://arxiv.org/abs/2008.04438">https://arxiv.org/abs/2008.04438</a></span> Coupled wire construction of a topological phase with chiral tricritical Ising edge modes (Yuval Oreg, Marcel Franz)</p>
+<p class="p1"><span class="s2"><a href="https://arxiv.org/abs/2008.04862">https://arxiv.org/abs/2008.04862</a></span> Rectification by hydrodynamic flow in an encapsulated graphene Tesla valve</p>
+<p class="p1"><span class="s2"><a href="https://arxiv.org/abs/2006.02485">https://arxiv.org/abs/2006.02485</a></span> Scrambling versus relaxation in Fermi and non-Fermi Liquids *** (Jaewon Kim,, Xiangyu Cao, Ehud Altman)</p>
+<p class="p1"><span class="s2"><a href="https://arxiv.org/abs/2005.10412">https://arxiv.org/abs/2005.10412</a></span> Holographic RG and Exact RG in O(N) Model</p>
+<p class="p1"><span class="s2"><a href="https://arxiv.org/abs/2004.14901">https://arxiv.org/abs/2004.14901</a></span> A novel approach to non-commutative gauge theory</p>
+<p class="p1"><span class="s2"><a href="https://arxiv.org/abs/2008.04833">https://arxiv.org/abs/2008.04833</a></span> Robustness of critical U(1) spin liquids and emergent symmetries in tensor networks</p>
+<p class="p1"><span class="s2"><a href="https://arxiv.org/abs/2004.05313">https://arxiv.org/abs/2004.05313</a></span> Comment: “Chaotic-Integrable Transition in the Sachdev-Ye-Kitaev Model”</p>
+<p class="p3"><br></p>
+<p class="p1">20200813</p>
+<p class="p1"><span class="s2"><a href="https://arxiv.org/abs/2008.05466">https://arxiv.org/abs/2008.05466</a></span> Experimental determination of the energy per particle in partially filled Landau levels (Michael P. Zaletel, Andrea F. Young)</p>
+<p class="p1"><span class="s2"><a href="https://arxiv.org/abs/2008.04977">https://arxiv.org/abs/2008.04977</a></span> Magneto-optical Kerr effect and signature of the chiral anomaly in a Weyl semimetal in a magnetic field</p>
+<p class="p1"><span class="s2"><a href="https://arxiv.org/abs/2008.05041">https://arxiv.org/abs/2008.05041</a></span> Nematic insulator at charge neutrality in twisted bilayer graphene ***** (Lucile Savary)</p>
+<p class="p1"><span class="s2"><a href="https://arxiv.org/abs/2008.05334">https://arxiv.org/abs/2008.05334</a></span> Electrical Access to Ising Anyons in Kitaev Spin Liquids *****</p>
+<p class="p3"><br></p>
+<p class="p1">20200814</p>
+<p class="p1"><span class="s2"><a href="https://arxiv.org/abs/2008.05501">https://arxiv.org/abs/2008.05501</a></span> Impurity induced scale-free localization</p>
+<p class="p1"><span class="s2"><a href="https://arxiv.org/abs/2008.05489">https://arxiv.org/abs/2008.05489</a></span> Hyperbolic band theory *** (Joseph Maciejko)</p>
+<p class="p1"><span class="s2"><a href="https://arxiv.org/abs/2008.05485">https://arxiv.org/abs/2008.05485</a></span> Parquet renormalization group analysis of weak-coupling instabilities with multiple high-order Van Hove points inside the Brillouin zone ***** (Yu-Ping Lin, Rahul M. Nandkishore)</p>
+<p class="p1"><span class="s2"><a href="https://arxiv.org/abs/2008.05499">https://arxiv.org/abs/2008.05499</a></span> Z2-enriched symmetry indicators for topological superconductors in the 1651 magnetic space groups ***** (Hoi Chun Po, Ken Shiozaki)</p>
+<p class="p1"><span class="s2"><a href="https://arxiv.org/abs/2008.05726">https://arxiv.org/abs/2008.05726</a></span> Landau levels for graphene layers in non-commutative plane</p>
+<p class="p3"><br></p>
+<p class="p1">20200817</p>
+<p class="p1"><span class="s2"><a href="https://arxiv.org/abs/2008.06498">https://arxiv.org/abs/2008.06498</a></span> Non-Hermitian Skin Effects in Hermitian Correlated/Disordered Systems: Boundary-Sensitive/Insensitive Quantities and Pseudo Quantum Number (Masatoshi Sato)</p>
+<p class="p1"><span class="s2"><a href="https://arxiv.org/abs/2008.06070">https://arxiv.org/abs/2008.06070</a></span> Spin-Weyl quantum unit: theoretical proposal</p>
+<p class="p1"><span class="s2"><a href="https://arxiv.org/abs/2008.05401">https://arxiv.org/abs/2008.05401</a></span> Convolutional RBM aided Monte Carlo: an application to Ising and Kitaev models</p>
+<p class="p1"><span class="s2"><a href="https://arxiv.org/abs/2008.06338">https://arxiv.org/abs/2008.06338</a></span> It’s anyon’s game: the race to quantum computation (Jainendra K. Jain)</p>
+<p class="p1"><span class="s2"><a href="https://arxiv.org/abs/2008.06381">https://arxiv.org/abs/2008.06381</a></span> Non-Fermi liquid transport in the vicinity of nematic quantum critical point of FeSe1−xSx superconductor (Y. Matsuda)</p>
+<p class="p1"><span class="s2"><a href="https://arxiv.org/abs/2008.06056">https://arxiv.org/abs/2008.06056</a></span> Quantum Mechanical Out-Of-Time-Ordered-Correlators for the Anharmonic (Quartic) Oscillator</p>
+<p class="p1"><span class="s2"><a href="https://arxiv.org/abs/2008.06499">https://arxiv.org/abs/2008.06499</a></span> Anomaly and Cobordism Constraints Beyond Grand Unification: Energy Hierarchy (Juven Wang)</p>
 	<iframe src="../last.html" style="width:100%; height:26; border:none"></iframe>
 	</div>
 
